ci: build docker images in workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,19 @@ jobs:
       - name: Run tests
         run: |
           pytest
+
+  docker-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build backend image
+        run: |
+          docker build -f Dockerfile.backend -t ai-test-backend:ci .
+
+      - name: Build sandbox image
+        run: |
+          docker build -f Dockerfile.sandbox -t ai-test-sandbox:ci .
