feat: add distributed sandbox architecture with oracle cloud support
- Add standalone sandbox-service for remote test execution
- Modify backend to consume sandbox via HTTP (httpx)
- Add comprehensive deployment guide (DEPLOYMENT.md)
- Update README with distributed architecture diagram
- Configure render.yaml with SANDBOX_SERVICE_URL
- Update .env.example with sandbox configuration

Changes:
- sandbox-service/: New FastAPI microservice for Docker execution
- backend/services/test_execution_service.py: HTTP client instead of local Docker
- DEPLOYMENT.md: Complete Oracle Cloud + Render + Vercel guide
- README.md: Architecture update and deployment overview
- render.yaml: Add SANDBOX_SERVICE_URL environment variable

Deployment Architecture:
- Frontend: Vercel (free tier)
- Backend: Render (free tier)
- Sandbox: Oracle Cloud VM (always free)
Total cost: \/month

--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,8 @@ services:
     envVars:
       - key: GROQ_API_KEY
         sync: false
+      - key: SANDBOX_SERVICE_URL
+        sync: false  # Set to http://<oracle-vm-ip>:8001
       - key: PYTHONUNBUFFERED
         value: "1"
     healthCheckPath: /docs
