--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
+# Backend Environment Variables
+
+# Required: Groq API key for LLM test generation
+# Get free key: https://console.groq.com
 GROQ_API_KEY=your_groq_api_key_here
+
+# Optional: Sandbox service URL for test execution
+# Development: http://localhost:8001
+# Production: http://<oracle-vm-public-ip>:8001
+SANDBOX_SERVICE_URL=http://localhost:8001
