docs: add deployment documentation and checklist

--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,8 @@ services:
       - key: GROQ_API_KEY
         sync: false
       - key: SANDBOX_SERVICE_URL
-        sync: false  # Set to http://<oracle-vm-ip>:8001
+        sync: false
+        sync: false  # Set to http://<oracle-vm-public-ip>:8001
       - key: PYTHONUNBUFFERED
         value: "1"
     healthCheckPath: /docs
